# INF2004_Team14

./: MasterFile  README.md  Testing ground
FinalCode/Barcode/: Barcode.c  CMakeLists.txt
FinalCode/Encoder/: CMakeLists.txt  Encoder.c
FinalCode/Magnometer/: CMakeLists.txt  Magnometer.c
FinalCode/Movement/: CMakeLists.txt  Movement.c
FinalCode/Ultrasonic/: CMakeLists.txt  Ultrasonic.c
FinalCode/Web/: CMakeLists.txt  FreeRTOSConfig.h  Web.c  lwipopts_examples_common.h
FinalCode/zFreeRtos/: CMakeLists.txt  FreeRTOSConfig.h  lwipopts.h  picow_freertos_ping.c
Irline/: CMakeLists.txt  irline_sensor.c
Motor/: Motor.c  Motor.uf2  PWMspeed.uf2  PWMspeedMeasuring  ReadMe  cMakeLists contents
Ultrasonic Sensors/: hello_usb.c  hello_usb.uf2
Wheel Encoders/: Encoder.c  Encoder.uf2  Readme  cMakeLists
Wifi/: CMakeLists.txt  wifi_driver.c
barcode/: CMakeLists.txt  barcode_code.c  barcode_code.uf2
diagrams/: readme
magnometer/: CMakeLists.txt  magnometer3.c  magnometer3.uf2  magnometer5.c  magnometer5.uf2
wheel Encoder/: Readme
