add_executable(magnometer5
magnometer5.c
        )

# pull in common dependencies and additional i2c hardware support
target_link_libraries(magnometer5 pico_stdlib hardware_i2c)

# create map/bin/hex file etc.
pico_add_extra_outputs(magnometer5)

# add url via pico_set_program_url
example_auto_set_url(magnometer5)
pico_enable_stdio_usb(magnometer5 1)